--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bulma": "^0.9.0",
     "classnames": "^2.2.6",
     "parcel-bundler": "^1.12.4",
-    "preact-dom": "^1.0.1"
+    "preact-dom": "^1.0.1",
+    "sass": "^1.26.10"
   }
 }
